# gui.nvim

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: ci.yml  test-and-build.yml
assets/icons/: gui-nvim.icns
extra/macos/GuiNvim.app/Contents/: Info.plist
extra/macos/gui.nvim.app/Contents/: Info.plist
src/: app.rs  cli.rs  config.rs  constants.rs  env.rs  event.rs  font_loader.rs  lib.rs  main.rs
src/bridge/: command.rs  events.rs  mod.rs  neovim.rs  parser.rs  process.rs  ui.rs
src/editor/: cell.rs  dirty.rs  grid.rs  highlight.rs  mod.rs  state.rs
src/input/: handler.rs  keyboard.rs  mod.rs  mouse.rs
src/renderer/: atlas.rs  batch.rs  color.rs  context.rs  font.rs  geometry.rs  grid_renderer.rs  mod.rs  pipeline.rs
src/renderer/font/: cache.rs  collection.rs  embedded.rs  face.rs  fallback.rs  legacy.rs  mod.rs  run.rs  shaper.rs  shaping_cache.rs  traits.rs  types.rs
src/renderer/font/face/: linux.rs  macos.rs  mod.rs  windows.rs
src/renderer/font/fallback/: linux.rs  macos.rs  mod.rs  windows.rs
src/renderer/font/loader/: linux.rs  macos.rs  mod.rs  windows.rs
src/renderer/font/platform/: mod.rs
src/renderer/font/platform/linux/: face.rs  fallback.rs  loader.rs  mod.rs
src/renderer/font/platform/macos/: face.rs  fallback.rs  loader.rs  mod.rs
src/renderer/font/platform/windows/: face.rs  fallback.rs  loader.rs  mod.rs
src/renderer/shaders/: quad.wgsl
src/window/: displaylink.rs  mod.rs  render_loop.rs  settings.rs  window.rs
tests/: simulation.rs
