[package]
name = "gui-nvim"
version = "0.1.0"
edition = "2021"
authors = ["Filip D"]
description = "GPU-accelerated Neovim GUI"
license = "MIT"

[dependencies]
# Neovim communication
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
rmpv = "1"
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Windowing
winit = "0.30.12"

# GPU rendering
wgpu = "28.0.0"
bytemuck = { version = "1", features = ["derive"] }

# Text shaping
harfbuzz_rs = "2.0"
harfbuzz-sys = "0.5"

# Utilities
ahash = "0.8"
bitflags = "2"
log = { version = "0.4", features = ["release_max_level_warn"] }
env_logger = "0.11"
thiserror = "2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

# Font handling (CoreText + objc2)
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSArray"] }
objc2-core-foundation = { version = "0.3", features = ["CFData", "CFError", "CFBase", "CFString"] }
objc2-core-text = { version = "0.3", features = ["CTFont", "CTFontManager", "CTFontDescriptor", "CTFontTraits", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", features = ["CGFont", "CGDataProvider", "CGContext", "CGBitmapContext", "CGColorSpace", "CGPath", "libc"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
