[package]
name = "gui-nvim"
version = "0.1.0"
edition = "2021"
authors = ["Filip D"]
description = "GPU-accelerated Neovim GUI"
license = "MIT"

[dependencies]
# Neovim communication
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
rmpv = "1"
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "io-util", "macros"] }

# Windowing
winit = "0.30.12"

# GPU rendering
wgpu = "28.0.0"
bytemuck = { version = "1", features = ["derive"] }

harfbuzz-sys = { version = "0.6", default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
ahash = "0.8"
bitflags = "2"
compact_str = "0.8"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.11"
thiserror = "2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

# macOS: CoreText + objc2 (harfbuzz auto-detects CoreText, no feature needed)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSArray"] }
objc2-core-foundation = { version = "0.3", features = ["CFData", "CFError", "CFBase", "CFString"] }
objc2-core-text = { version = "0.3", features = ["CTFont", "CTFontManager", "CTFontDescriptor", "CTFontTraits", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", features = ["CGFont", "CGDataProvider", "CGContext", "CGBitmapContext", "CGColorSpace", "CGPath", "libc"] }
harfbuzz-sys = { version = "0.6", default-features = false }

# Linux: FreeType + fontconfig, harfbuzz with freetype backend (TODO: add when implementing)
[target.'cfg(target_os = "linux")'.dependencies]
harfbuzz-sys = { version = "0.6", default-features = false, features = ["freetype"] }
# freetype-rs = "0.35"
# fontconfig = "0.6"

# Windows: DirectWrite, harfbuzz with directwrite backend (TODO: add when implementing)
[target.'cfg(target_os = "windows")'.dependencies]
harfbuzz-sys = { version = "0.6", default-features = false, features = ["directwrite"] }
# dwrote = "0.11"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "gui.nvim"
identifier = "com.github.gui-nvim"
icon = ["assets/icons/gui-nvim.icns"]
category = "Developer Tool"
short_description = "GPU-accelerated Neovim GUI"
osx_minimum_system_version = "11.0"
